Overhaul Website - Multiple changes. New Work Pages.

--- a/css/resp.css
+++ b/css/resp.css
@@ -50,6 +50,27 @@
             font-size: 1.3em;
           }
 
+          .h5botmargin{
+            margin-top: 10%;
+            margin-bottom: 15%;
+          }
+
+          .liftup{
+            
+            margin-bottom: 5%;
+          }
+
+          .boxImageMain{
+            max-height: 200px;
+            border-radius:10px;
+          }
+
+          .smallDisp{
+            display: block;
+          }
+          .smallDispArrow{
+            margin-bottom: 5%;
+          }
     }
 
     /* Extra Small Devices, Phones */
@@ -106,7 +127,23 @@
       }
 
 
+      .h5botmargin{
+        margin-top: 10%;
+            margin-bottom: 15%;
+      }
 
+      .liftup{
+            margin-bottom: 5%;
+          }
 
-
+    .boxImageMain{
+            max-height: 200px;
+            border-radius:10px;
+          }      
+          .smallDisp{
+            display: block;
+          }
+          .smallDispArrow{
+            margin-bottom: 5%;
+          }    
     }
