--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html,body{
 height: 100%;
 overflow-x:hidden;
 background-color: #222125;
-font-family: "raleway-light";
+font-family: "Raleway-Light";
 font-weight: 100 !important;
 color:#bbb;
 }
