Change Font for 3 sections

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ position: relative;
 }
 
 .threesections{
-  /*font-family: "Raleway";*/
+  font-family: "Raleway";
   margin-top: 7%;
   text-align: center;
   color: white;
